--- a/index.html
+++ b/index.html
@@ -192,14 +192,85 @@
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
-            <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
-            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
-            <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit quos corporis ratione libero facere. Consequatur cupiditate ut sunt vel beatae!</p>
+            <h4 class="font-semibold text-lg text-primary mb-2">Blog</h4>
+            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Tulisan Terkini</h2>
+            <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ut voluptatum a animi?</p>
+          </div>
+        </div>
+
+        <div class="flex flex-wrap">
+          <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+              <img src="https://source.unsplash.com/360x200?react" alt="programming" class="w-full" />
+              <div class="py-8 px-6">
+                <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate"><h3>React.Js Menguasai Dunia</h3></a>
+                <p class="font-medium text-secondary text-base mb-6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, blanditiis.</p>
+                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover: opacity-80">Baca selengkapnya</a>
+              </div>
+            </div>
+          </div>
+          <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+              <img src="https://source.unsplash.com/360x200?javascript" alt="programming" class="w-full" />
+              <div class="py-8 px-6">
+                <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate"><h3>Kenapa JavaScript</h3></a>
+                <p class="font-medium text-secondary text-base mb-6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, blanditiis.</p>
+                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover: opacity-80">Baca selengkapnya</a>
+              </div>
+            </div>
+          </div>
+          <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+            <div class="bg-white rounded-xl shadow-lg overflow-hidden mb-10">
+              <img src="https://source.unsplash.com/360x200?programming" alt="programming" class="w-full" />
+              <div class="py-8 px-6">
+                <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate"><h3>Tips Belajar Tailwindcss</h3></a>
+                <p class="font-medium text-secondary text-base mb-6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, blanditiis.</p>
+                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-lg hover: opacity-80">Baca selengkapnya</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- Blog Section End -->
+
+    <!-- Contact Section Start -->
+    <section id="contact" class="pt-36 pb-32">
+      <div class="container">
+        <div class="w-full px-4">
+          <div class="max-w-xl mx-auto text-center mb-16">
+            <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
+            <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Yuk Collab!</h2>
+            <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim ut voluptatum a animi?</p>
+          </div>
+        </div>
+        <!-- form contact -->
+        <form>
+          <div class="w-full lg:w-2/3 lg:mx-auto">
+          <div class="w-full mb-8 px-4">
+            <label for="name" class="text-base text-primary font-bold">Nama</label>
+            <input type="text" id="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" />
+          </div>
+          <div class="w-full mb-8 px-4">
+            <label for="email" class="text-base text-primary font-bold">Email</label>
+            <input type="email" id="email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" />
+          </div>
+          <div class="w-full mb-8 px-4">
+            <label for="message" class="text-base text-primary font-bold">Pesan</label>
+            <textarea type="text" id="message" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary h-32"></textarea>
+          </div>
+          <div class="w-full px-4">
+            <button class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full w-full hover:opacity-80 hover:shadow-lg transition duration-500">Kirim</div>
+            </button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <!-- Contact Section End -->
+
+    <!-- Footer Start -->
+
+    <!-- Footer End -->
 
     <script src="dist/js/script.js"></script>
   </body>
